--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,6 @@
   "editor.tabSize": 2,
   "terminal.integrated.fontFamily": "MesloLGM Nerd Font Mono",
   "terminal.integrated.fontSize": 15,
-  //  "editor.fontFamily": "'Fira Code Retina'",
   "editor.fontFamily": "'Dank Mono'",
   "editor.fontLigatures": true,
   "prettier.trailingComma": "all",
@@ -18,7 +17,6 @@
   "prettier.jsxSingleQuote": true,
   "prettier.printWidth": 100,
   "workbench.colorTheme": "Night Owl",
-  //"workbench.editor.showTabs": false,
   "workbench.colorCustomizations": {
     "tab.activeBackground": "#011627",
     "tab.activeBorder": "#011627",
@@ -26,11 +24,11 @@
     "tab.unfocusedActiveBorder": "#011627",
     "editorGroupHeader.noTabsBackground": "#011627",
     "editorLineNumber.foreground": "#081b2c",
-    "editorLineNumber.activeForeground": "#0b2136"
+    "editorLineNumber.activeForeground": "#0b2136",
+    "editorIndentGuide.background": "#011627",
+    "editorIndentGuide.activeBackground": "#203f5c"
   },
   "breadcrumbs.enabled": false,
-  "editor.renderWhitespace": "boundary",
-  "editor.matchBrackets": "never",
-  "editor.renderIndentGuides": false
+  "editor.renderWhitespace": "none",
+  "editor.matchBrackets": "never"
 }
-
